--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
         <dialog>
             <form method="dialog">
                 <fieldset>
-                <label for="title">Book title <input type="text" id="title"></label>
+                <label for="title">Book title</label> 
+                <input type="text" id="title" name="title" aria-label="book title">
             </fieldset>
-            <fieldset>
-                <label for="author">Author <input type="text" id="author"></label>
-            </fieldset>
-            <fieldset>
-                <label for="pages">No. of Pages <input type="number" id="title"></label>
-            </fieldset>
-            <fieldset>
-                <label for="read">Read? <input type="text"</label>
-            </fieldset>
+                <fieldset>
+                    <label for="author">Author</label>
+                    <input type="text" id="author" name="author" aria-label="author">
+                </fieldset>
+                <fieldset>
+                    <label for="pages">No. of Pages</label> 
+                    <input type="number" id="pages" name="pages" aria-label="number of pages">
+                <fieldset>
+                    <label for="read">Read?</label> 
+                    <input type="text" id="read" name="read" aria-label="read?">
+                </fieldset>
+                <button id="add">Add Book</button>
             </form>
         </dialog>
     </header>
