--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My First Webpage</title>
+    <title>Library</title>
     <link rel="stylesheet" href="style.css">
     <script src="js-file.js" defer></script>
   </head>
@@ -11,11 +11,12 @@
         <h1>Library Catalogue</h1>
         <button id="book-info">Add New Book</button>
         <dialog>
-            <form method="dialog">
+            <button id="close" aria-label="close">X</button>
+            <form method="dialog" id="form">
                 <fieldset>
-                <label for="title">Book title</label> 
-                <input type="text" id="title" name="title" aria-label="book title">
-            </fieldset>
+                    <label for="title">Book title</label> 
+                    <input type="text" id="title" name="title" aria-label="book title">
+                </fieldset>
                 <fieldset>
                     <label for="author">Author</label>
                     <input type="text" id="author" name="author" aria-label="author">
@@ -27,7 +28,7 @@
                     <label for="read">Read?</label> 
                     <input type="text" id="read" name="read" aria-label="read?">
                 </fieldset>
-                <button id="add">Add Book</button>
+                <button id="add" type="submit">Add Book</button>
             </form>
         </dialog>
     </header>
